--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,9 @@
 /device/generic/x86 pdk
 /device/generic/x86_64 pdk
 /device/google/atv broadcom_pdk generic_fs pdk device
+/device/google/barbet barbet device
+/device/google/barbet-kernel barbet device
+/device/google/barbet-sepolicy barbet device
 /device/google/bonito bonito device
 /device/google/bonito-kernel bonito device
 /device/google/bonito-sepolicy bonito device
@@ -77,6 +80,7 @@
 /bootable/recovery pdk
 /build/make pdk
 /build/bazel pdk
+/build/bazel_common_rules pdk
 /build/blueprint tradefed pdk
 /build/pesto pdk
 /build/soong tradefed pdk
@@ -1044,6 +1048,5 @@
 /tools/treble pdk tools
 /tools/trebuchet pdk-fs cts pdk-cw-fs pdk tools
 /toolchain/benchmark
-/external/llvm-project pdk
 /toolchain/pgo-profiles pdk
 /tools/platform-compat pdk-fs pdk-cw-fs pdk
