--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,9 @@
 /device/generic/x86 pdk
 /device/generic/x86_64 pdk
 /device/google/atv broadcom_pdk generic_fs pdk device
+/device/google/barbet barbet device
+/device/google/barbet-kernel barbet device
+/device/google/barbet-sepolicy barbet device
 /device/google/bonito bonito device
 /device/google/bonito-kernel bonito device
 /device/google/bonito-sepolicy bonito device
@@ -407,6 +410,7 @@
 /external/rust/crates/android_logger pdk
 /external/rust/crates/anyhow pdk
 /external/rust/crates/arbitrary pdk
+/external/rust/crates/ash pdk
 /external/rust/crates/async-stream pdk
 /external/rust/crates/async-stream-impl pdk
 /external/rust/crates/async-task pdk
@@ -435,6 +439,7 @@
 /external/rust/crates/crossbeam-channel pdk
 /external/rust/crates/crossbeam-deque pdk
 /external/rust/crates/crossbeam-epoch pdk
+/external/rust/crates/crossbeam-queue pdk
 /external/rust/crates/crossbeam-utils pdk
 /external/rust/crates/csv pdk
 /external/rust/crates/csv-core pdk
@@ -555,6 +560,7 @@
 /external/rust/crates/serde_json pdk
 /external/rust/crates/serde_test pdk
 /external/rust/crates/shared_child pdk
+/external/rust/crates/shared_library pdk
 /external/rust/crates/shlex pdk
 /external/rust/crates/slab pdk
 /external/rust/crates/smallvec pdk
@@ -585,6 +591,7 @@
 /external/rust/crates/uuid pdk
 /external/rust/vmm_vhost pdk
 /external/rust/crates/vsock pdk
+/external/rust/crates/vulkano pdk
 /external/rust/crates/walkdir pdk
 /external/rust/crates/weak-table pdk
 /external/rust/crates/webpki pdk
