--- a/.gitmodules
+++ b/.gitmodules
@@ -2099,6 +2099,10 @@
 	branch = master
 	path = external/rust/crates/getrandom
 	url = ../external/rust/crates/getrandom
+[submodule "platform/external/rust/crates/glam"]
+	branch = master
+	path = external/rust/crates/glam
+	url = ../external/rust/crates/glam
 [submodule "platform/external/rust/crates/glob"]
 	branch = master
 	path = external/rust/crates/glob
