--- a/.gitmodules
+++ b/.gitmodules
@@ -874,9 +874,6 @@
 [submodule "platform/external/libconfig"]
 	path = external/libconfig
 	url = ../external/libconfig
-[submodule "platform/external/libcppbor"]
-	path = external/libcppbor
-	url = ../external/libcppbor
 [submodule "platform/external/libcups"]
 	path = external/libcups
 	url = ../external/libcups
@@ -1552,6 +1549,9 @@
 [submodule "platform/external/rust/crates/getrandom"]
 	path = external/rust/crates/getrandom
 	url = ../external/rust/crates/getrandom
+[submodule "platform/external/rust/crates/glam"]
+	path = external/rust/crates/glam
+	url = ../external/rust/crates/glam
 [submodule "platform/external/rust/crates/glob"]
 	path = external/rust/crates/glob
 	url = ../external/rust/crates/glob
@@ -3130,6 +3130,9 @@
 [submodule "platform/system/libbase"]
 	path = system/libbase
 	url = ../system/libbase
+[submodule "platform/system/libcppbor"]
+	path = system/libcppbor
+	url = ../system/libcppbor
 [submodule "platform/system/libfmq"]
 	path = system/libfmq
 	url = ../system/libfmq
