--- a/.gitattributes
+++ b/.gitattributes
@@ -290,7 +290,6 @@
 /external/libchrome pdk
 /external/libchromeos-rs pdk
 /external/libconfig pdk
-/external/libcppbor pdk
 /external/libcups pdk-fs pdk-cw-fs
 /external/libcxx pdk
 /external/libcxxabi pdk
@@ -321,6 +320,8 @@
 /external/libprotobuf-mutator pdk
 /external/libsrtp2 pdk
 /external/libtextclassifier pdk
+/external/libtraceevent pdk
+/external/libtracefs pdk
 /external/liburing pdk
 /external/libusb pdk
 /external/libutf pdk
@@ -425,10 +426,13 @@
 /external/python/pycparser pdk
 /external/python/pyfakefs pdk
 /external/python/pyopenssl pdk
+/external/python/pyserial pdk
 /external/python/python-api-core pdk
 /external/python/rsa vts pdk
 /external/python/setuptools vts pdk
 /external/python/six vts pdk
+/external/python/timeout-decorator pdk
+/external/python/typing pdk
 /external/python/uritemplates vts pdk
 /external/rappor pdk
 /external/renderscript-intrinsics-replacement-toolkit pdk
@@ -458,6 +462,7 @@
 /external/rust/crates/bindgen pdk
 /external/rust/crates/bitflags pdk
 /external/rust/crates/bstr pdk
+/external/rust/crates/buddy_system_allocator pdk
 /external/rust/crates/byteorder pdk
 /external/rust/crates/bytes pdk
 /external/rust/crates/cast pdk
@@ -495,6 +500,8 @@
 /external/rust/crates/fallible-streaming-iterator pdk
 /external/rust/crates/flate2 pdk
 /external/rust/crates/fnv pdk
+/external/rust/crates/foreign-types pdk
+/external/rust/crates/foreign-types-shared pdk
 /external/rust/crates/form_urlencoded pdk
 /external/rust/crates/futures pdk
 /external/rust/crates/futures-channel pdk
@@ -508,6 +515,7 @@
 /external/rust/crates/gdbstub pdk
 /external/rust/crates/gdbstub_arch pdk
 /external/rust/crates/getrandom pdk
+/external/rust/crates/glam pdk
 /external/rust/crates/glob pdk
 /external/rust/crates/grpcio pdk
 /external/rust/crates/grpcio-compiler pdk
@@ -554,6 +562,7 @@
 /external/rust/crates/oid-registry pdk
 /external/rust/crates/once_cell pdk
 /external/rust/crates/oorandom pdk
+/external/rust/crates/openssl pdk
 /external/rust/crates/parking_lot pdk
 /external/rust/crates/parking_lot_core pdk
 /external/rust/crates/paste pdk
@@ -578,6 +587,7 @@
 /external/rust/crates/proc-macro2 pdk
 /external/rust/crates/protobuf pdk
 /external/rust/crates/protobuf-codegen pdk
+/external/rust/crates/psci pdk
 /external/rust/crates/quiche pdk
 /external/rust/crates/quickcheck pdk
 /external/rust/crates/quote pdk
@@ -621,6 +631,7 @@
 /external/rust/crates/syn-mid pdk
 /external/rust/crates/tempfile pdk
 /external/rust/crates/termcolor pdk
+/external/rust/crates/terminal-size pdk
 /external/rust/crates/textwrap pdk
 /external/rust/crates/thiserror pdk
 /external/rust/crates/thiserror-impl pdk
@@ -693,6 +704,7 @@
 /external/toolchain-utils
 /external/toybox pdk
 /external/tpm2-tss pdk
+/external/trace-cmd pdk
 /external/tremolo pdk
 /external/turbine pdk
 /external/ukey2 pdk
@@ -978,6 +990,7 @@
 /prebuilts/go/linux-x86 tradefed pdk linux
 /prebuilts/gradle-plugin pdk-fs pdk-cw-fs pdk
 /prebuilts/jdk/jdk11 pdk
+/prebuilts/jdk/jdk17 pdk
 /prebuilts/jdk/jdk8 pdk
 /prebuilts/jdk/jdk9 pdk
 /prebuilts/ktlint pdk
@@ -1009,6 +1022,7 @@
 /prebuilts/vndk/v29 pdk
 /prebuilts/vndk/v30 pdk
 /prebuilts/vndk/v31 pdk
+/prebuilts/vndk/v32 pdk
 /sdk pdk-fs pdk-cw-fs
 /system/apex pdk
 /system/bpf pdk
@@ -1028,6 +1042,7 @@
 /system/keymaster pdk
 /system/libartpalette pdk
 /system/libbase pdk
+/system/libcppbor pdk
 /system/libfmq pdk
 /system/libhidl pdk
 /system/libhwbinder pdk
