--- a/.gitmodules
+++ b/.gitmodules
@@ -874,9 +874,6 @@
 [submodule "platform/external/libconfig"]
 	path = external/libconfig
 	url = ../external/libconfig
-[submodule "platform/external/libcppbor"]
-	path = external/libcppbor
-	url = ../external/libcppbor
 [submodule "platform/external/libcups"]
 	path = external/libcups
 	url = ../external/libcups
@@ -967,6 +964,12 @@
 [submodule "platform/external/libtextclassifier"]
 	path = external/libtextclassifier
 	url = ../external/libtextclassifier
+[submodule "platform/external/libtraceevent"]
+	path = external/libtraceevent
+	url = ../external/libtraceevent
+[submodule "platform/external/libtracefs"]
+	path = external/libtracefs
+	url = ../external/libtracefs
 [submodule "platform/external/liburing"]
 	path = external/liburing
 	url = ../external/liburing
@@ -1279,6 +1282,9 @@
 [submodule "platform/external/python/pyopenssl"]
 	path = external/python/pyopenssl
 	url = ../external/python/pyopenssl
+[submodule "platform/external/python/pyserial"]
+	path = external/python/pyserial
+	url = ../external/python/pyserial
 [submodule "platform/external/python/python-api-core"]
 	path = external/python/python-api-core
 	url = ../external/python/python-api-core
@@ -1291,6 +1297,12 @@
 [submodule "platform/external/python/six"]
 	path = external/python/six
 	url = ../external/python/six
+[submodule "platform/external/python/timeout-decorator"]
+	path = external/python/timeout-decorator
+	url = ../external/python/timeout-decorator
+[submodule "platform/external/python/typing"]
+	path = external/python/typing
+	url = ../external/python/typing
 [submodule "platform/external/python/uritemplates"]
 	path = external/python/uritemplates
 	url = ../external/python/uritemplates
@@ -1378,6 +1390,9 @@
 [submodule "platform/external/rust/crates/bstr"]
 	path = external/rust/crates/bstr
 	url = ../external/rust/crates/bstr
+[submodule "platform/external/rust/crates/buddy_system_allocator"]
+	path = external/rust/crates/buddy_system_allocator
+	url = ../external/rust/crates/buddy_system_allocator
 [submodule "platform/external/rust/crates/byteorder"]
 	path = external/rust/crates/byteorder
 	url = ../external/rust/crates/byteorder
@@ -1489,6 +1504,12 @@
 [submodule "platform/external/rust/crates/fnv"]
 	path = external/rust/crates/fnv
 	url = ../external/rust/crates/fnv
+[submodule "platform/external/rust/crates/foreign-types"]
+	path = external/rust/crates/foreign-types
+	url = ../external/rust/crates/foreign-types
+[submodule "platform/external/rust/crates/foreign-types-shared"]
+	path = external/rust/crates/foreign-types-shared
+	url = ../external/rust/crates/foreign-types-shared
 [submodule "platform/external/rust/crates/form_urlencoded"]
 	path = external/rust/crates/form_urlencoded
 	url = ../external/rust/crates/form_urlencoded
@@ -1528,6 +1549,9 @@
 [submodule "platform/external/rust/crates/getrandom"]
 	path = external/rust/crates/getrandom
 	url = ../external/rust/crates/getrandom
+[submodule "platform/external/rust/crates/glam"]
+	path = external/rust/crates/glam
+	url = ../external/rust/crates/glam
 [submodule "platform/external/rust/crates/glob"]
 	path = external/rust/crates/glob
 	url = ../external/rust/crates/glob
@@ -1666,6 +1690,9 @@
 [submodule "platform/external/rust/crates/oorandom"]
 	path = external/rust/crates/oorandom
 	url = ../external/rust/crates/oorandom
+[submodule "platform/external/rust/crates/openssl"]
+	path = external/rust/crates/openssl
+	url = ../external/rust/crates/openssl
 [submodule "platform/external/rust/crates/parking_lot"]
 	path = external/rust/crates/parking_lot
 	url = ../external/rust/crates/parking_lot
@@ -1738,6 +1765,9 @@
 [submodule "platform/external/rust/crates/protobuf-codegen"]
 	path = external/rust/crates/protobuf-codegen
 	url = ../external/rust/crates/protobuf-codegen
+[submodule "platform/external/rust/crates/psci"]
+	path = external/rust/crates/psci
+	url = ../external/rust/crates/psci
 [submodule "platform/external/rust/crates/quiche"]
 	path = external/rust/crates/quiche
 	url = ../external/rust/crates/quiche
@@ -1867,6 +1897,9 @@
 [submodule "platform/external/rust/crates/termcolor"]
 	path = external/rust/crates/termcolor
 	url = ../external/rust/crates/termcolor
+[submodule "platform/external/rust/crates/terminal-size"]
+	path = external/rust/crates/terminal-size
+	url = ../external/rust/crates/terminal-size
 [submodule "platform/external/rust/crates/textwrap"]
 	path = external/rust/crates/textwrap
 	url = ../external/rust/crates/textwrap
@@ -2083,6 +2116,9 @@
 [submodule "platform/external/tpm2-tss"]
 	path = external/tpm2-tss
 	url = ../external/tpm2-tss
+[submodule "platform/external/trace-cmd"]
+	path = external/trace-cmd
+	url = ../external/trace-cmd
 [submodule "platform/external/tremolo"]
 	path = external/tremolo
 	url = ../external/tremolo
@@ -2938,6 +2974,9 @@
 [submodule "platform/prebuilts/jdk/jdk11"]
 	path = prebuilts/jdk/jdk11
 	url = ../prebuilts/jdk/jdk11
+[submodule "platform/prebuilts/jdk/jdk17"]
+	path = prebuilts/jdk/jdk17
+	url = ../prebuilts/jdk/jdk17
 [submodule "platform/prebuilts/jdk/jdk8"]
 	path = prebuilts/jdk/jdk8
 	url = ../prebuilts/jdk/jdk8
@@ -3031,6 +3070,9 @@
 [submodule "platform/prebuilts/vndk/v31"]
 	path = prebuilts/vndk/v31
 	url = ../prebuilts/vndk/v31
+[submodule "platform/prebuilts/vndk/v32"]
+	path = prebuilts/vndk/v32
+	url = ../prebuilts/vndk/v32
 [submodule "platform/sdk"]
 	path = sdk
 	url = ../sdk
@@ -3088,6 +3130,9 @@
 [submodule "platform/system/libbase"]
 	path = system/libbase
 	url = ../system/libbase
+[submodule "platform/system/libcppbor"]
+	path = system/libcppbor
+	url = ../system/libcppbor
 [submodule "platform/system/libfmq"]
 	path = system/libfmq
 	url = ../system/libfmq
