--- a/.gitmodules
+++ b/.gitmodules
@@ -117,37 +117,37 @@
 	path = prebuilts/fullsdk-linux/cmake
 	url = ../prebuilts/cmake/linux-x86
 [submodule "platform/prebuilts/fullsdk-darwin/build-tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/build-tools
 	url = ../prebuilts/fullsdk-darwin/build-tools
 [submodule "platform/prebuilts/fullsdk-darwin/platform-tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/platform-tools
 	url = ../prebuilts/fullsdk-darwin/platform-tools
 [submodule "platform/prebuilts/fullsdk-darwin/tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/tools
 	url = ../prebuilts/fullsdk-darwin/tools
 [submodule "platform/prebuilts/fullsdk-linux/build-tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-linux/build-tools
 	url = ../prebuilts/fullsdk-linux/build-tools
 [submodule "platform/prebuilts/fullsdk-linux/platform-tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-linux/platform-tools
 	url = ../prebuilts/fullsdk-linux/platform-tools
 [submodule "platform/prebuilts/fullsdk-linux/tools"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-linux/tools
 	url = ../prebuilts/fullsdk-linux/tools
 [submodule "platform/prebuilts/fullsdk/platforms/android-31"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/platforms/android-31
 	url = ../prebuilts/fullsdk/platforms/android-31
@@ -157,12 +157,12 @@
 	path = prebuilts/fullsdk-darwin/platforms/android-32
 	url = ../prebuilts/fullsdk/platforms/android-32
 [submodule "platform/prebuilts/fullsdk/platforms/android-33"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/platforms/android-33
 	url = ../prebuilts/fullsdk/platforms/android-33
 [submodule "platform/prebuilts/fullsdk/sources/android-31"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/sources/android-31
 	url = ../prebuilts/fullsdk/sources/android-31
@@ -172,7 +172,7 @@
 	path = prebuilts/fullsdk-darwin/sources/android-32
 	url = ../prebuilts/fullsdk/sources/android-32
 [submodule "platform/prebuilts/fullsdk/sources/android-33"]
-	branch = master
+	branch = androidx-main
 	shallow = true
 	path = prebuilts/fullsdk-darwin/sources/android-33
 	url = ../prebuilts/fullsdk/sources/android-33
