Added repo manifest.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3687,6 +3687,10 @@
 	branch = main
 	path = hardware/libhardware_legacy
 	url = ../hardware/libhardware_legacy
+[submodule "platform/hardware/nxp/keymint"]
+	branch = main
+	path = hardware/nxp/keymint
+	url = ../hardware/nxp/keymint
 [submodule "platform/hardware/nxp/nfc"]
 	branch = main
 	path = hardware/nxp/nfc
@@ -3699,6 +3703,10 @@
 	branch = main
 	path = hardware/nxp/uwb
 	url = ../hardware/nxp/uwb
+[submodule "platform/hardware/nxp/weaver"]
+	branch = main
+	path = hardware/nxp/weaver
+	url = ../hardware/nxp/weaver
 [submodule "platform/hardware/qcom/audio"]
 	branch = main
 	path = hardware/qcom/audio
