Added repo manifest.

--- a/.gitattributes
+++ b/.gitattributes
@@ -156,6 +156,7 @@
 /external/bazelbuild-rules_go pdk
 /external/bazelbuild-rules_java pdk
 /external/bazelbuild-rules_license pdk
+/external/bazelbuild-rules_python pdk
 /external/bazelbuild-rules_rust pdk
 /external/bazelbuild-rules_testing pdk
 /external/bc pdk
