--- a/.gitmodules
+++ b/.gitmodules
@@ -667,6 +667,10 @@
 	branch = main
 	path = external/bazelbuild-rules_license
 	url = ../external/bazelbuild-rules_license
+[submodule "platform/external/bazelbuild-rules_python"]
+	branch = main
+	path = external/bazelbuild-rules_python
+	url = ../external/bazelbuild-rules_python
 [submodule "platform/external/bazelbuild-rules_rust"]
 	branch = main
 	path = external/bazelbuild-rules_rust
